# rust_practice

./: .gitignore  Cargo.toml  client.crt  client.key  generate_cert.sh  pixiv.net.crt  pixiv.net.key  root.crt  server.crt  server.key
async_t/: Cargo.toml
async_t/src/: executor.rs  lib.rs  self_ref.rs  time_futures.rs
certs/: client-cert.pem  client-key.pem  root-cert.pem  server-cert.pem  server-key.pem
db/: Cargo.toml
db/src/: lib.rs
db/src/sql/: sql_builder.rs
db/tests/: db.rs
error-t/: Cargo.toml
error-t/src/: lib.rs
mysql_t/: Cargo.toml
mysql_t/src/: initialize.rs  lib.rs
parctice/: Cargo.toml
parctice/src/: closure.rs  lib.rs  options.rs  results.rs  serdes.rs
parctice/src/std/: btree.rs
s-chain/: Cargo.toml
s-chain/src/: lib.rs
s-chain/src/btc/: mod.rs
s-chain/src/eth/: address.rs  unit.rs
s-chain/src/sol/: provider.rs
s-chain/src/tron/: key.rs  mod.rs
s-codec/: Cargo.toml  build.rs
s-codec/src/: lib.rs
s-codec/src/protobuf/proto/: example.proto
s-crypto/: Cargo.toml
s-crypto/src/: bytes.rs  hash.rs  hex.rs  lib.rs  secp.rs  signature.rs
s-redis/: Cargo.toml
s-redis/src/: db.rs  frame.rs  server.rs  shutdown.rs
s-redis/src/clients/: client.rs
s-redis/src/cmd/: ping.rs  unknown.rs
s-runtime/: Cargo.toml
s-runtime/src/: executor.rs  lib.rs  time_futures.rs
s-std/: Cargo.toml
s-std/src/: closure.rs  lib.rs  options.rs  results.rs  serdes.rs
s-std/src/macros/: mod.rs
s-std/src/std/: atomic.rs  mod.rs
s-tls/: Cargo.toml  client.crt.pem  client.key.pem  generate_cert.sh  root.crt.pem  root.crt.srl  server.crt.pem  server.key.pem
s-tls/src/: lib.rs
s-tokio/: Cargo.toml
s-tokio/src/: lib.rs
s-tokio/src/core/: runtime.rs
s-tokio/src/io/: file.rs
s-tokio/src/sync/: channel.rs
s-tools/: Cargo.toml
s-tools/src/: lib.rs
s-tools/src/log/: mod.rs
s-tools/src/thiserror/: mod.rs
s-tracing/: Cargo.toml
s-tracing/src/: main.rs  oter.rs
s-transport/: Cargo.toml
s-transport/src/: lib.rs  request_builder.rs
s-transport/src/client/: http_client.rs  mod.rs  rpc_client.rs
s-transport/src/errors/: mod.rs
s-transport/src/types/: request.rs
sqlx_t/: Cargo.toml
sqlx_t/src/: builder.rs  lib.rs  tx.rs
t-redis/: Cargo.toml  README.MD
t-redis/src/: connection.rs  db.rs  lib.rs  server.rs
t-redis/src/cmd/: get.rs  mod.rs  unknown.rs
tokio-test/: Cargo.toml
tokio-test/src/: lib.rs
tokio-test/src/core/: mod.rs  runtime.rs
tokio-test/src/io/: client.rs  file.rs  mod.rs  server.rs
tokio-test/src/sync/: mod.rs  notify.rs  semaphor.rs
tokio-tls-test/: Cargo.toml
tokio-tls-test/src/: lib.rs
ws_t/: Cargo.toml
ws_t/src/: lib.rs
