[package]
name = "s-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = { workspace = true }
s-tools = { path = "../s-tools" }
s-transport = { path = "../s-transport" }
