[package]
name = "s-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { git = "https://github.com/alloy-rs/alloy", version = "0.1.0" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = { workspace = true }
s-tools = { path = "../s-tools" }
s-transport = { path = "../s-transport" }


secp256k1 = { version = "*", features = ["rand-std", "recovery"] }
sha3 = "0.10.8"
hex = "0.4.3"
sha2 = "0.10.8"
bs58 = { version = "*", features = ["check"] }
