[package]
name = "sqlx_t"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6.1", features = ["mysql", "runtime-tokio-rustls", "macros", "chrono"] }
tokio = { version = "1.19.2", features = ["full"] }