[package]
name = "t-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"

clap = { version = "4.2.7", features = ["derive"] }
atoi = "2.0.0"

tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }


