[package]
name = "tokio-tls-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tls-client"
path = "src/bin/client.rs"
[[bin]]
name = "tls-serve"
path = "src/bin/serve.rs"

[dependencies]
# 用于静态初始化
lazy_static = "1.4.0"
# 用于异步
tokio = { version = "1", features = ["full"] }
# 用于tls
tokio-rustls = { version = "0.23.4",features = ["dangerous_configuration"]}
webpki-roots = "0.22"
# 用于正则
regex = "1.5.4"
# 用于证书加载
rustls-pemfile = "0.2"